app/src/main/java/com/example/fail/network/App/App.kt
package com.example.fail.network.App

import android.app.Application
import dagger.hilt.android.HiltAndroidApp

@HiltAndroidApp
class App:Application() {
}